versioned_docs/version-6.2/sharding/unsupported.mdx
---
title: "Sharding: Unsupported Features"
sidebar_label: "Unsupported Features"
sidebar_position: 2
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

<Admonition type="note" title="">

* A sharded RavenDB database generally provides the same services as a non-sharded database,  
  so existing applications, queries, subscriptions, patches, and similar operations typically require no modification.
    
* However, some features that are supported in non-sharded databases are not yet supported in sharded databases.  
  The list below details these unsupported features.    
  
* In this article:  
  * [Unsupported Indexing Features](../sharding/unsupported.mdx#unsupported-indexing-features)  
  * [Unsupported Querying Features](../sharding/unsupported.mdx#unsupported-querying-features)  
  * [Unsupported Document Extensions Features](../sharding/unsupported.mdx#unsupported-document-extensions-features)  
  * [Unsupported Backup Features](../sharding/unsupported.mdx#unsupported-backup-features)  
  * [Unsupported Import & Export Features](../sharding/unsupported.mdx#unsupported-import--export-features)  
  * [Unsupported Migration Features](../sharding/unsupported.mdx#unsupported-migration-features)  
  * [Unsupported Data Subscription Features](../sharding/unsupported.mdx#unsupported-data-subscription-features)  
  * [Unsupported Integrations Features](../sharding/unsupported.mdx#unsupported-integrations-features)  
  * [Unsupported Patching Features](../sharding/unsupported.mdx#unsupported-patching-features)  
  * [Unsupported Replication Features](../sharding/unsupported.mdx#unsupported-replication-features)  
  
</Admonition>

## Unsupported Indexing Features

| Unsupported Feature                              | Comment |
| ------------------------------------------------ | ------- |
| Rolling index deployment                         | [Rolling index deployment](../indexes/rolling-index-deployment.mdx) is not supported in a sharded database. |
| Loading a document that resides on another shard | [Loading a document during indexing](../indexes/indexing-related-documents.mdx) is possible only if the document resides on the shard. |
| Outputting map-reduce results to a collection    | Outputting map-reduce index results to an [artificial documents collection](../indexes/map-reduce-indexes.mdx#map-reduce-output-documents) is not supported in a sharded database. |
| Custom sorters                                   | [Custom sorters](../indexes/querying/sorting.mdx#creating-a-custom-sorter) are not supported in a sharded database. |

Reference: [Unsupported indexing features](../sharding/indexing.mdx#unsupported-indexing-features).

---

## Unsupported Querying Features

| Unsupported Feature                                           | Comment |
| ------------------------------------------------------------- | ------- |
| Loading a document that resides on another shard              | A query can only load a document if it resides on the same shard. Loading a document that resides on a different shard will return _null_. |
| Loading a document within a Map-Reduce projection             | Learn more in [Loading a document within a projection](../sharding/querying.mdx#loading-a-document-within-a-projection). |
| Includes and loads are not supported in streaming queries     | Learn more in [Limitations when streaming query results in a sharded database](../sharding/querying.mdx#limitations-when-streaming-query-results-in-a-sharded-database). |
| Ordering streamed Map-Reduce results by non-reduce-key fields | Learn more in [Limitations when streaming query results in a sharded database](../sharding/querying.mdx#limitations-when-streaming-query-results-in-a-sharded-database). |
| Querying with limit in patch/delete by query operations       | Attempting to set a `limit` with [PatchByQueryOperation](../client-api/operations/patching/set-based.mdx#patchbyqueryoperation) or [DeleteByQueryOperation](../client-api/operations/common/delete-by-query.mdx) will throw _NotSupportedInShardingException_. |
| OrderByDistance                                               | [OrderByDistance](../client-api/session/querying/how-to-make-a-spatial-query.mdx#spatial-sorting) is not supported for map-reduce indexes in sharded databases. Only supported for regular (map) indexes in a sharded database. |
| OrderByScore                                                  | [OrderByScore](../indexes/querying/sorting.mdx#ordering-by-score) is not supported in a sharded database. |
| MoreLikeThis                                                  | Method [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) is not supported in a sharded database. |
| Highlighting                                                  | [Highlighting](../indexes/querying/highlighting.mdx) is not supported in a sharded database. |
| Intersection                                                  | [Intersection](../indexes/querying/intersection.mdx) is not supported in a sharded database. |

Reference: [Unsupported querying features](../sharding/indexing.mdx#unsupported-querying-features).

---

## Unsupported Document Extensions Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| **Move Attachments** | E.g. `session.Advanced.Attachments.Move("users/1","foo","users/2","bar");` is not supported. |
| **Copy Attachments** | E.g. `session.Advanced.Attachments.Copy("users/1","foo","users/2","bar");` is not supported. |
| **Get multiple Attachments** | E.g. `session.Advanced.Attachments.Get(attachmentNames)` is not supported. |
| **Copy Time Series** | E.g. `session.Advanced.Defer(new CopyTimeSeriesCommandData(id,  "Count", id2, "Count"));` is not supported. |

## Unsupported Backup Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [Create a Snapshot Backup](../sharding/backup-and-restore/backup.mdx#backup-type) |  |
| [Restore from a Snapshot Backup](../sharding/backup-and-restore/restore.mdx#sharding-restore) |  |

## Unsupported Import & Export Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [Import from a CSV file](../studio/database/tasks/import-data/import-from-csv.mdx) |  |
| **Import from an S3 Bucket** | using GET, Studio, smuggler, import s3 dir |
| [Import from SQL](../studio/database/tasks/import-data/import-from-sql.mdx) | |
| [Import from Other Databases](../studio/database/tasks/import-data/import-from-other.mdx) | Importing from databases like MongoDB and CosmosDB is not supported |

## Unsupported Migration Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [Migrate from RavenDB](../studio/database/tasks/import-data/import-from-ravendb.mdx) | By POST, Studio, smuggler |
| [Migrate from SQL DB](../studio/database/tasks/import-data/import-from-sql.mdx) |  |

## Unsupported Data Subscription Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [Concurrent Subscriptions](../client-api/data-subscriptions/concurrent-subscriptions.mdx) |  |
| [Data Subscriptions Revisions Support](../client-api/data-subscriptions/advanced-topics/subscription-with-revisioning.mdx) | Subscribing to document revisions |
| [SubscriptionCreationOptions.ChangeVector](../sharding/subscriptions.mdx#unsupported-features) | Providing a change vector to start the processing from is not supported <br/> except for these special cases: <br/> `"LastDocument"`, `"BeginningOfTime"`, `"DoNotChange"` |

## Unsupported Integrations Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [PostgreSQL](../integrations/postgresql-protocol/overview.mdx) |  |
| [Queue ETL](../server/ongoing-tasks/etl/queue-etl/overview.mdx) | [Kafka ETL](../server/ongoing-tasks/etl/queue-etl/kafka.mdx), [RabbitMQ ETL](../server/ongoing-tasks/etl/queue-etl/rabbit-mq.mdx) |
| [Queue Sink](../server/ongoing-tasks/queue-sink/overview.mdx) | [Kafka Queue Sink](../server/ongoing-tasks/queue-sink/kafka-queue-sink.mdx), [RabbitMQ Queue Sink](../server/ongoing-tasks/queue-sink/rabbit-mq-queue-sink.mdx) |

## Unsupported Patching Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [JSON patch](../client-api/operations/patching/json-patch-syntax.mdx) |  |

## Unsupported Replication Features

| Unsupported Feature | Comment |
| ------------- | ------------- |
| [Filtered Replication](../studio/database/tasks/ongoing-tasks/hub-sink-replication/overview.mdx#filtered-replication) |  |
| [Hub/Sink Replication](../studio/database/tasks/ongoing-tasks/hub-sink-replication/overview.mdx) |  |
| **Legacy replication** | From RavenDB 3.x instances |



